# gsc_db

./: .gitignore  .pre-commit-config.yaml  2025_June_GSC_Report.md  2025_June_Hourly_Report.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_REVIEW.md  MODERNIZATION_PROPOSAL.md  PLAN.md  README.md  UPDATE.md  VERSION.md  analytics_report_builder.py  app.py  bug_note_discuss_0721.md  bulk_data_synchronizer.py  clean_test_data.py  client_secret.json  commands.txt  console_commands.py  cron_sync.sh  demo_fast_mode.py  diagnose_generator.py  diagnose_july.py  diagnose_sync_hang.py  gsc_credentials.json  gsc_data.db  gsc_main.py  gsc_mcp.py  gsc_simple.py  gsc_visualization.py  hourly_analysis.py  hourly_performance_analyzer.py  interactive_bubble_chart.py  justfile  kw_example.txt  list_sites.py  load_test.py  main.py  (+24 more)
.cursor/rules/: ai-execute-rule.mdc  python.mdc
.github/workflows/: api-contract-tests.yml
assets/: Interactive_Keywords_Bubble.html  Interactive_Multi_Site_Comparison.html  Interactive_Pages_Bubble.html  PetCuteCute_2025_June_Report.md
cred/: sync_state.json
data/sc-domain_urbanlifehk.com/test/: 2025-07-22.parquet
docs/: CODE_QUALITY_IMPROVEMENTS.md  DATABASE_SETUP_AND_QUOTA_ANALYSIS.md  DEVELOPMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  MODERNIZATION_PROPOSAL.md  MULTIPROCESS_GUIDE.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_DETAILED.md  README_CLI.md  SYSTEM_FLOW_DIAGRAM.md  gsc_hourly_guide.md
examples/: multiprocess_usage.py
frontend-sample/: .gitignore  README.md  api-examples.js  dashboard.html  index.html  search.html  test-dashboard.html
gsc-db-refactor/: CLAUDE.md  CODE_OF_CONDUCT.md  README.md
gsc-db-refactor/docs/: MODERNIZATION_PROPOSAL.md
legacy/: CLAUDE.md  UPDATE.md  config.toml  output.txt  package-lock.json  setup.py
legacy/cred/: client_secret_ming.json  sync_state.json
legacy/docs/: SYSTEM_FLOW_DIAGRAM.md  gsc_api_optimization.md  gsc_guide.md  just_for_run_script_in_poetry.md  ssl_error_handling.md
legacy/examples/: multiprocess_usage.py
legacy/issues/: git_security_history.md
legacy/scripts/: README.md
legacy/scripts/page_keyword_export/: README.md  export_page_keywords_to_csv_zh.py
legacy/scripts/page_keyword_export/exports/: 頁面關鍵字_網站14_20250722_122152.csv
legacy/sql/: formatted_output_queries.sql
legacy/src/: app.py  containers_single_process.py.bak
legacy/src/analysis/: hourly_performance_analyzer.py
legacy/src/jobs/: bulk_data_synchronizer.py
legacy/src/services/: analysis_service.py  data_aggregation_service.py  gsc_client.py  hourly_data.py  process_safe_database.py  site_service.py
legacy/src/utils/: matplotlib_utils.py  system_health_check.py
legacy/src/web/: api.py
legacy/src/web/api/: main.py
legacy/tests/: test_api_performance.py  test_multiprocess_database.py
routes/: analytics.py  auth.py  data_builder.py  keywords.py  sites.py
scripts/: README.md  daily_maintenance.sh  full_sync.py  sitemap_redundancy_analyzer.py  sitemap_url_performance_exporter.py
scripts/page_keyword_export/: README.md  export_page_keywords_to_csv.py  export_page_keywords_to_csv_zh.py
services/: __init__.py  build_progress.py  data_builder.py  database.py  gsc_client.py  hourly_data.py  hourly_database.py  semantic_search.py
src/: __init__.py  app.py  config.py  containers.py  containers_multiprocess.py  main.py  models.py
src/analysis/: analytics_report_builder.py  hourly_performance_analyzer.py  interactive_data_visualizer.py
src/api/: app.py  diagnostics.py  performance.py  routes.py
src/cli/: commands.py  dependencies.py
src/database/: __init__.py  base.py  buffers.py  datastore.py  hybrid.py  hybrid_adapter.py  optimize_performance.sql  schema.py  sync_progress.py  utils.py
src/database/repositories/: __init__.py  hourly_repository.py  performance_repository.py  site_repository.py
src/database/services/: __init__.py  analytics_service.py  bulk_insert_service.py  streaming_service.py
src/jobs/: bulk_data_synchronizer.py
src/services/: analysis_service.py  cache.py  data_aggregation_service.py  database.py  gsc_client.py  hourly_data.py  hourly_database.py  monitoring.py  process_safe_database.py  site_service.py
src/utils/: aggregation_helper.py  console_utils.py  matplotlib_utils.py  query_shortcuts.py  rich_console.py  state_manager.py  system_health_check.py  test_cleanup.py  windows_encoding_fix.py
src/web/: api.py  api_multiprocess.py  api_single_process.py.bak  schemas.py
src/web/api/: README.md  __init__.py  main.py
src/web/api/dependencies/: __init__.py
src/web/api/routers/: analytics.py  diagnostics.py  health.py  (+2 more)
static/css/: query.css  style.css
static/js/: app.js  query.js
templates/: base.html  home.html  index.html  query.html
test_results/: gsc_concurrency_test_20250725_012518.json  load_test_results_20250725_011806.json  load_test_results_20250725_012011.json  load_test_results_20250725_012037.json  stress_test_results_20250725_012140.json  test_export.csv
tests/: API_TESTING.md  README.md  __init__.py  api_contracts.yaml  clean_test_data.py  conftest.py  demo_optimizations.py  performance_benchmark.py  test_api_contract.py  test_api_performance.py  test_api_quick.py  test_container_hang_fix.py  test_database.py  test_database_concurrency.py  test_edge_cases.py  test_gsc_api_optimization.py  test_gsc_client_auth.py  test_integration.py  test_page_keyword_performance.py  test_readme_functionality.py  test_report_integration.py  test_unit_jobs.py
tests/integration/: test_gsc_concurrent.py  test_gsc_limits.py  test_real_gsc_auth.py  test_resume_sync.py
tests/performance/: load_test.py
tests/stress/: stress_test.py
(+5 files in other folders)
