[tool.poetry]
name = "gsc-db"
version = "0.1.0"
description = "Enterprise-level Google Search Console data management and analysis tool"
authors = ["Rose <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
typer = "*"
rich = "*"
google-api-python-client = "^2.130.0"
google-auth-oauthlib = "^1.2.0"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.32.4"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
tabulate = "^0.9.0"
tqdm = "^4.67.1"
dependency-injector = "^4.41.0"
plotly = "^6.2.0"
pydantic-settings = "^2.10.1"
tenacity = "^8.2.3"
seaborn = "^0.13.2"
lxml = "^6.0.0"
google-auth-httplib2 = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.2"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.4.20250611"
pandas-stubs = "^2.3.0.250703"
types-seaborn = "^0.13.2.20250516"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 啟用 Pyflakes, Pycodestyle, isort 等核心規則
select = ["E", "F", "W", "I"]

[tool.ruff.format]
# 使用雙引號，與 black 風格一致
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# 忽略缺少類型註解的第三方庫
ignore_missing_imports = true

# 針對特定模塊的配置
[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "plotly.*",
    "matplotlib.*",
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "tqdm.*",
    "dependency_injector.*",
    "tenacity.*"
]
ignore_missing_imports = true
ignore_errors = true

[tool.poetry.scripts]
gsc-cli = "src.app:main"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
