[tool.poetry]
name = "gsc-data-manager"
version = "0.1.0"
description = "GSC Data Manager - Parquet + DuckDB 極簡版"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pyarrow = "^14.0.0"
duckdb = "^0.9.0"
google-api-python-client = "^2.100.0"
google-auth = "^2.20.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
flask = "^3.0.0"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
gsc-sync = "sync:main"
gsc-api = "app:main"
gsc-mcp = "gsc_mcp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"